--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://www.flaticon.com/svg/vstatic/svg/4615/4615431.svg?token=exp=1620756074~hmac=1330d92c97cdfeb52162f63149f4def6">
+    <link rel="shortcut icon" href="https://png.pngtree.com/png-clipart/20190604/original/pngtree-vector-cartoon-classic-car-png-image_1492996.jpg">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap.css.map">
     <link rel="stylesheet" href="css/mystyle.css">
